# AI-Tetris

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: quality.yml
assets/pieces/: classic7.yaml  pentominoes.yaml  test.yaml
conf/datagen/: codemy0_uniform_noise.yaml  codemy1_uniform_noise.yaml  codemy2_uniform_noise.yaml
conf/envs/: empty_lock.yaml  empty_lock_7bag.yaml  eval_empty.yaml  train_empty.yaml  train_warmup.yaml  warmup.yaml  warmup_finite_horizon.yaml
conf/planning_policies/: codemy.yaml  codemy_normalized.yaml  heuristic.yaml  heuristic_new.yaml
conf/rewards/: codemy_heuristic_delta.yaml  custom_heuristic_delta_clipped.yaml  lines.yaml  lines_clean.yaml  lines_height_scaled.yaml  lines_height_scaled_terminal.yaml  lines_shape.yaml  lines_survival.yaml
conf/sb3_policies/: cnn1.yaml  patchscan.yaml  patchscan_ablation.yaml  patchscan_experiment1.yaml  pretrained.yaml  vit.yaml
conf/trains/: ga_heuristic.yaml  imitation.yaml  ppo_eval.yaml  td_heuristic.yaml
configs/: cnn_imitation.yaml  cnn_ppo.yaml  ga_heuristic.yaml  ga_heuristic_test.yaml  td_heuristic.yaml  vit_ppo.yaml
configs/datagen/: codemy0_uniform_noise.yaml  codemy1_uniform_noise.yaml  codemy2_uniform_noise.yaml  heuristic_uniform_noise_depth0.yaml  heuristic_uniform_noise_depth1.yaml
configs/env_bundles/: macro_discrete_warmup.yaml
configs/envs/: eval_empty.yaml  macro_discrete_warmup.yaml  macro_empty.yaml  macro_warmup.yaml  train_empty.yaml  train_warmup.yaml
configs/ga/: ga_codemy.yaml  ga_experimental.yaml  ga_heuristic.yaml  ga_heuristic_test.yaml
configs/hydra/: default.yaml
configs/imitation/: cnn_imitation.yaml  patchscan_ablation_imitation.yaml
configs/models/: cnn1.yaml  cnn2.yaml  cnn3.yaml  vit.yaml  vit_plus_mlp.yaml  vit_small.yaml  vit_test_1.yaml
configs/old/: mlp.yaml  mlp_old.yaml  test.yaml  vit_dqn.yaml  vit_ppo.yaml
configs/planning_policies/: codemy.yaml  heuristic.yaml  heuristic_new.yaml
configs/ppo/: cnn_ppo.yaml  ppo_cnn.yaml  ppo_patchscan.yaml  ppo_patchscan_ablation.yaml  ppo_patchscan_experiment1.yaml  ppo_patchscan_experiment2.yaml  ppo_patchscan_pretrained.yaml  ppo_vit.yaml
configs/rewards/: heuristic_delta.yaml  lines.yaml  lines_survival.yaml
configs/td/: td_heuristic.yaml
configs/trains/: ga_heuristic.yaml  imitation.yaml  ppo_bc_eval.yaml  ppo_eval.yaml  td_heuristic.yaml
docs/: release_checklist.md
docs/architecture/: rust-engine.md
rust/: Cargo.toml
rust/engine/: Cargo.toml
rust/py/: Cargo.toml
rust/src/: game.rs  main.rs  piece_rule.rs  pieces.rs  policy.rs  policy_codemy.rs
rust/tetris_cli/: Cargo.toml
rust_engine/: Cargo.toml
rust_py/: Cargo.toml
rust_py/src/: lib.rs
tests/: conftest.py  test_config_schema_guardrails.py  test_legacy_run_config_loading.py  test_policy_bootstrap_errors.py  test_warmup_holes_normalization.py
(+590 files in other folders)
