[build-system]
requires = ["maturin>=1.6"]
build-backend = "maturin"

[project]
name = "rl-tetris"
version = "0.1.0"
description = "Tetris game with RL experiments"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "numpy>=1.23,<2.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "sb3-contrib>=2.3",
    "torch>=2.0",
    "pygame>=2.5",
    "tqdm>=4.66",
    "rich>=13",
    "hydra-core>=1.3",
    "pydantic>=2.6",
]

[project.optional-dependencies]
viz = ["opencv-python>=4.8,<5.0"]

[project.scripts]
tetris-train = "tetris_rl.cli.train:main"
tetris-watch = "tetris_rl.cli.watch:main"
tetris-datagen = "tetris_rl.cli.datagen:main"
tetris-engine-speedtest = "tetris_rl.cli.engine_speedtest:main"


[tool.maturin]
manifest-path = "rust/py/Cargo.toml"
python-source = "src"
features = ["pyo3/extension-module"]
module-name = "tetris_rl_engine"
profile = "release"
